MAINT: Use syrk as an exception

--- a/driver/level3/meson.build
+++ b/driver/level3/meson.build
@@ -128,7 +128,7 @@ driver_kops = [
   },
   { 'base': '?syrk',
     'sources': {
-        'symm_k.c': {'mode': ['s', 'd', # 'q'],
+        'syrk_k.c': {'mode': ['s', 'd', # 'q'],
                               'c', 'z'], # 'x'],
                      'exts': ['_UN', '_UT',
                               '_LN', '_LT']},
@@ -188,7 +188,7 @@ foreach _kop : driver_kops
         _ext_cargs = []
 
         # Check ext_mappings first
-        if ext_mappings.has_key(ext)
+        if ext_mappings.has_key(ext) and (not ext_mappings.has_key('except') or base not in ext_mappings['except'])
           extmap = ext_mappings[ext]
           if extmap.has_key('def')
             foreach _d : extmap['def']
